# llm_dev

./: README.md
hugging_face/: pyproject.toml  requirments.txt  turorial.ipynb
hugging_face/api/: model_server.py  stream_server.py  test_stream.py
hugging_face/index/: index_stream.html
langchain/: =2.4  entity_extractor_to_json.py  requirments.txt
langchain/data/: paper_sam2.txt
